src/components/Videos/Videos.css
.guide {

}

.common-Card {
    position: relative;
    background-color: #fff;
    border-radius: 8px;
    padding: 30px;
    width: 350px;
    -webkit-box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3);
    box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3);
}

.common-Card:hover {
    box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3);
    transform: translateY(-2px);
}

.cover {
    position: relative;
    height: 170px;
    background-color: #fcd669;
    background-image: url(https://stripe.com/img/v3/atlas/guide/hero-illustration.svg);
    background-size: 1267px 400px;
    background-repeat: no-repeat;
    background-position: -190px -165px;
    /*    background-position: 0 0;
    background-size: 100% auto;*/
    margin: -30px -30px 25px;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    overflow: hidden;
}

.cover:after {
    content: "";
    position: absolute;
    width: 100%;
    height: 200px;
    top: 100%;
    left: 0;
    background-color: #fff;
    -webkit-transform: skewY(-12deg);
    transform: skewY(-12deg);
    -webkit-transform-origin: 0 0;
    transform-origin: 0 0;
}

